# FuckingAlgorithm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
backtrace/: 46.cc
disjoint-set/: 547.cc  P1551.cc
dp/: 152.cc  53.cc  55.cc  70.cc  jz10.cc
include/: ListNode.h  NestedInteger.h  Node.h  TreeNode.h
others/: 20.cc  566.cc  5830.cc  66.cc  67.cc
src/: 105.cc  106.cc  1091.cc  112.cc  114.cc  124.cc  129.cc  130.cc  139.cc  21.cc  222.cc  226.cc  235.cc  28.cc  3.cc  300.cc  307.cc  326.cc  429.cc  45.cc  46.cc  5839.cc  590.cc  622.cc  64.cc  66.cc  70.cc  743.cc  797.cc  872.cc  889.cc  jz_14_1.cc  jz_45.cc  jz_56_2.cc  m1714.cc
src/disjoint-set/: P1551.cc
src/dp/: 152.cc  5.cc  55.cc  jz10.cc
src/monotonic-stack/: 402.cc  496.cc  739.cc
src/normal/: 1.cc  10.cc  1008.cc  101.cc  1014.cc  102.cc  1020.cc  103.cc  1034.cc  1036.cc  1078.cc  108.cc  1091.cc  1104.cc  111.cc  1114.cc  113.cc  1137.cc  116.cc  1161.cc  117.cc  118.cc  1185.py  119.cc  120.cc  1267.cc  1268.cc  1302.cc  1314.cc  136.cc  1376.cc  141.cc  145.cc  1480.cc  1609.cc  167.cc  17.cc  18.cc  189.cc  19.cc  (+167 more)
src/others/: 566.cc  5830.cc  67.cc
src/review/: 100.cc  107.cc  11.cc  1109.cc  1154.cc  121.cc  122.cc  1221.cc  1352.cc  1377.cc  139.cc  1395.cc  142.cc  146.cc  1475.cc  148.cc  15.cc  152.cc  155.cc  1567.cc  160.cc  162.cc  1705.cc  2055.cc  206.cc  208.cc  257.cc  264.cc  27.cc  279.cc  28.cc  29.cc  3.cc  300.cc  307.cc  309.cc  322.cc  338.cc  371.cc  39.cc  (+36 more)
src/tree/: 104.cc  144.cc  173.cc  199.cc  341.cc  404.cc  501.cc  513.cc  543.cc  559.cc  814.cc  94.cc  m0404.cc  m0405.cc
src/trick/: p1226.cc
tree/: 100.cc  101.cc  102.cc  104.cc  107.cc  108.cc  111.cc  112.cc  113.cc  114.cc  144.cc  145.cc  222.cc  226.cc  235.cc  257.cc  341.cc  404.cc  501.cc  513.cc  543.cc  559.cc  589.cc  590.cc  814.cc  872.cc  94.cc  98.cc  m0404.cc  m0405.cc
trick/: p1226.cc
