cmake_minimum_required(VERSION 3.1)
project(FuckingAlgorithm)
set(CMAKE_CXX_STANDARD 11)

include_directories(include)

add_executable(FuckingAlgorithm
        main.cpp
        src/94.cc
        src/100.cc
        src/101.cc
        src/104.cc
        src/111.cc
        src/144.cc
        src/112.cc
        src/P1551.cc
        src/547.cc
        src/102.cc
        src/107.cc
        src/114.cc
        src/341.cc
        src/222.cc
        src/70.cc
        src/p1226.cc
        src/5830.cc
        src/55.cc
        src/98.cc
        src/113.cc
        src/513.cc
        src/46.cc
        src/66.cc
        src/566.cc
        src/67.cc
        src/20.cc
        src/108.cc
        src/145.cc
        src/872.cc
        src/559.cc
        src/589.cc
        src/590.cc
        src/814.cc
        src/226.cc
        src/257.cc
        src/235.cc
        src/404.cc
        src/m0404.cc
        src/543.cc
        src/501.cc
        src/53.cc
        src/152.cc
        src/jz10.cc
        src/m0405.cc
        src/146.cc
        src/1104.cc
        src/103.cc
        src/105.cc
        src/106.cc
        src/173.cc
        src/199.cc
        src/322.cc
        src/5.cc
        src/64.cc
        src/496.cc
        src/503.cc
        src/739.cc
        src/42.cc
        src/316.cc
        src/901.cc
        src/402.cc
        src/581.cc
        src/5838.cc
        src/5839.cc
        src/129.cc
        src/515.cc
        src/429.cc
        src/1161.cc
        src/1008.cc
        src/889.cc)

target_link_libraries(FuckingAlgorithm gtest pthread)