cmake_minimum_required(VERSION 3.1)
project(FuckingAlgorithm)
set(CMAKE_CXX_STANDARD 11)

include_directories(include)

add_executable(FuckingAlgorithm
        main.cpp
        src/normal/94.cc
        src/review/100.cc
        src/normal/101.cc
        src/normal/104.cc
        src/normal/111.cc
        src/normal/144.cc
        src/normal/112.cc
        src/review/P1551.cc
        src/review/547.cc
        src/normal/102.cc
        src/review/107.cc
        src/normal/114.cc
        src/normal/341.cc
        src/normal/222.cc
        src/review/70.cc
        src/normal/p1226.cc
        src/review/5830.cc
        src/normal/55.cc
        src/normal/98.cc
        src/normal/113.cc
        src/normal/513.cc
        src/review/46.cc
        src/normal/66.cc
        src/normal/566.cc
        src/normal/67.cc
        src/normal/20.cc
        src/normal/108.cc
        src/normal/145.cc
        src/normal/872.cc
        src/normal/559.cc
        src/normal/589.cc
        src/normal/590.cc
        src/normal/814.cc
        src/normal/226.cc
        src/review/257.cc
        src/normal/235.cc
        src/normal/404.cc
        src/normal/m0404.cc
        src/normal/543.cc
        src/review/501.cc
        src/normal/53.cc
        src/review/152.cc
        src/normal/jz10.cc
        src/review/m0405.cc
        src/review/146.cc
        src/normal/1104.cc
        src/normal/103.cc
        src/normal/105.cc
        src/normal/106.cc
        src/normal/173.cc
        src/normal/199.cc
        src/review/322.cc
        src/review/5.cc
        src/normal/64.cc
        src/review/496.cc
        src/review/503.cc
        src/normal/739.cc
        src/review/42.cc
        src/review/316.cc
        src/review/901.cc
        src/normal/402.cc
        src/review/581.cc
        src/normal/5838.cc
        src/normal/5839.cc
        src/normal/129.cc
        src/normal/515.cc
        src/normal/429.cc
        src/normal/1161.cc
        src/normal/1008.cc
        src/review/889.cc
        src/normal/1302.cc
        src/normal/1376.cc src/normal/654.cc src/normal.cc src/normal/1267.cc src/124.cc)

target_link_libraries(FuckingAlgorithm gtest pthread)